Minify the inline CSS

--- a/src/CryptoJSEasyTransfer.html
+++ b/src/CryptoJSEasyTransfer.html
@@ -10,20 +10,7 @@
     <script src="vendor/FileSaver.min.js"></script>
     <script src="crypto.js"></script>
 
-    <style>
-        body {
-            font-family: monospace;
-            font-size: 16px;
-            background-color: #164c3185;
-        }
-        h2 {
-            font-size: 1.4rem;
-            margin-bottom: 20px;
-        }
-        div#status {
-            margin-top: 10px;
-        }
-    </style>
+    <style>body{font-family:monospace;font-size:16px;background-color:#164c3185}h2{font-size:1.4rem;margin-bottom:20px}div#status{margin-top:10px}</style>
 </head>
 
 <body>
